2010-05-24  Adam Barth  <abarth@webkit.org>

        Reviewed by Eric Seidel.

        First cut at HTML5 entities
        https://bugs.webkit.org/show_bug.cgi?id=39649

        Update the expected results to show the new passing tests.  Yay!

        * html5lib/webkit-runner-expected-html5.txt:

2010-05-24  Robert Hogan  <robert@webkit.org>

        Reviewed by Laszlo Gombos.

        [Qt] DRT Support for removeOriginAccessWhitelistEntry

        Unskips http/tests/xmlhttprequest/origin-whitelisting-removal.html

        [Qt] DRT Support for removeOriginAccessWhitelistEntry
        https://bugs.webkit.org/show_bug.cgi?id=39565

        * platform/qt/Skipped:

2010-05-24  Andreas Kling  <andreas.kling@nokia.com>

        Reviewed by Sam Weinig.

        Add a test to verify that the 'prototype' property on generated Web IDL interfaces is { DontDelete | ReadOnly }.

        Spec link:
        http://www.w3.org/TR/WebIDL/#interface-object

        https://bugs.webkit.org/show_bug.cgi?id=39436

        * fast/dom/global-constructors-expected.txt: Updated baseline.
        * fast/dom/global-constructors.html:
        * fast/dom/prototype-property-expected.txt: Added.
        * fast/dom/prototype-property.html: Added.
        * fast/dom/script-tests/prototype-property.js: Added.
        (tryToDeletePrototype):
        (tryToSetPrototype):

2010-05-24  Adam Barth  <abarth@webkit.org>

        Reviewed by Eric Seidel.

        Import remaining html5lib tests into webkit-runner.html
        https://bugs.webkit.org/show_bug.cgi?id=39638

        We should be able to drive the diffs between webkit-runner-expected.txt
        and webkit-runner-expected-html5.txt to zero.

        Another option is to remove webkit-runner and just use runner.html, but
        we don't yet support <script src=...> in the HTML5 parser.

        * html5lib/webkit-runner-expected-html5.txt:
        * html5lib/webkit-runner-expected.txt:
        * html5lib/webkit-runner.html:
