@@ -25,7 +25,7 @@ CONSOLE MESSAGE: line 1: SyntaxError: Parse error
 Content-Type: text/plain
 resources/tests1.dat: 25, 29, 30, 32, 33, 34, 35, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 50, 51, 52, 53, 54, 57, 59, 78, 79, 80, 81, 82, 87, 90, 91, 92, 96, 98, 101, 104, 106, 109, 113
 
-resources/tests2.dat: 6, 7, 8, 9, 10, 11, 12, 17, 18, 19, 20, 21, 22, 29, 32, 33, 36, 40, 42, 44, 45, 53, 54, 57
+resources/tests2.dat: 6, 7, 8, 9, 10, 11, 17, 18, 19, 20, 21, 22, 29, 32, 33, 36, 40, 42, 44, 45, 53, 54, 57
 
 resources/tests3.dat: 5, 6, 7, 8, 16, 17, 18, 19
 
