@@ -1,3 +1,15 @@
+2010-05-25  Adam Barth  <abarth@webkit.org>
+
+        Reviewed by Eric Seidel.
+
+        Fix <noembed> and <plaintext> content models
+        https://bugs.webkit.org/show_bug.cgi?id=39653
+
+        PLAINTEXTState is my favorite lexer state.  :)
+
+        * html/HTML5TreeBuilder.cpp:
+        (WebCore::HTML5TreeBuilder::passTokenToLegacyParser):
+
 2010-05-24  Adam Barth  <abarth@webkit.org>
 
         Reviewed by Eric Seidel.
