@@ -1,3 +1,14 @@
+2010-05-25  Adam Barth  <abarth@webkit.org>
+
+        Reviewed by Eric Seidel.
+
+        Fix <noembed> and <plaintext> content models
+        https://bugs.webkit.org/show_bug.cgi?id=39653
+
+        Update expected result to show new passing test.
+
+        * html5lib/webkit-runner-expected-html5.txt:
+
 2010-05-24  Adam Barth  <abarth@webkit.org>
 
         Reviewed by Eric Seidel.
